--- a/src/sass/components/OrderPart.scss
+++ b/src/sass/components/OrderPart.scss
@@ -159,6 +159,24 @@
             height: 100%;
             min-width: 14px;
             border-bottom: none;
+            &:first-child::before {
+              background-color: $blue5;
+              border-radius: 2px;
+              content: "View Shipping Details";
+              color: $c1;
+              cursor: pointer;
+              display: block;
+              font-weight: 300;
+              font-style: italic;
+              padding: 0.4rem;
+              position: absolute;
+              top: 1rem;
+              right: 1rem;
+              z-index: 10;
+              &:hover {
+                background-color: $blue3;
+              }
+            }
           }
         }
         &.machine_serial_num {
