--- a/src/css/components/OrderSubList.css
+++ b/src/css/components/OrderSubList.css
@@ -113,20 +113,30 @@
         display: inline-block;
         position: absolute;
         top: 0;
-        right: 1.6rem;
+        left: 0;
+        right: 0;
         bottom: 0;
         display: flex;
         align-items: center; }
         .OrderSubList .header.status-type-header .reveal-hide-button-wrapper button {
+          width: 100%;
+          height: 100%;
           cursor: pointer;
           border: none;
           background-color: transparent;
+          position: relative;
           text-align: center;
           color: #3D3D3D; }
           .OrderSubList .header.status-type-header .reveal-hide-button-wrapper button span {
+            position: absolute;
+            top: 0;
+            right: 1.6rem;
+            bottom: 0;
             text-align: center;
             border: none;
-            width: 100%; }
+            width: 2.4rem;
+            display: flex;
+            align-items: center; }
             .OrderSubList .header.status-type-header .reveal-hide-button-wrapper button span i {
               font-size: 2.4rem; }
           .OrderSubList .header.status-type-header .reveal-hide-button-wrapper button:focus {
