--- a/src/sass/components/OrderSubList.scss
+++ b/src/sass/components/OrderSubList.scss
@@ -42,22 +42,33 @@
         display: inline-block;
         position: absolute;
         top: 0;
-        right: 1.6rem;
+        left: 0;
+        right: 0;
         bottom: 0;
         display: flex;
         align-items: center;
         button {
+          width: 100%;
+          height: 100%;
           cursor: pointer;
           border: none;
           background-color: transparent;
           // outline: solid 1px red;
+          position: relative;
           text-align: center;
           color: $c7;
           span {
+            position: absolute;
+            top: 0;
+            right: 1.6rem;
+            bottom: 0;
             // outline: solid 1px blue;
             text-align: center;
             border: none;
-            width: 100%;
+            // width: 100%;
+            width: 2.4rem;
+            display: flex;
+            align-items: center;
             i {
               font-size: 2.4rem;
             }
