Add max-width restraint on admin Dashboard for better UI aesthetic

--- a/src/css/components/Dashboard.css
+++ b/src/css/components/Dashboard.css
@@ -106,6 +106,8 @@
     margin: 0.7em;
     margin: auto;
     position: relative; }
+  .Dashboard.admin .content-wrapper {
+    max-width: 968px; }
 
 .Dashboard-header {
   display: flex;
