--- a/src/sass/components/Order.scss
+++ b/src/sass/components/Order.scss
@@ -479,6 +479,13 @@
           display: inline-block;
         }
       }
+      .finalize-controls-wrapper {
+        .Confirmation {
+          button {
+            border: none;
+          }
+        }
+      }
     }
   }
 }
