--- a/src/sass/components/OrderPart.scss
+++ b/src/sass/components/OrderPart.scss
@@ -138,6 +138,9 @@
     .split-instructions {
       font-weight: 300;
       font-style: italic;
+      .warning {
+        color: $error_red;
+      }
     }
   }
 }
