--- a/src/css/components/Dashboard.css
+++ b/src/css/components/Dashboard.css
@@ -215,7 +215,7 @@
     text-decoration: none;
     color: inherit; }
   .button.logout {
-    width: 7rem;
+    width: 6rem;
     font-size: 1em;
     text-align: center;
     background-color: transparent;
@@ -223,14 +223,22 @@
     border-radius: 0;
     display: flex;
     align-items: center;
-    justify-content: center; }
-    .button.logout span {
+    padding: 0 0.2rem 0 0;
+    position: relative; }
+    .button.logout div {
       border-bottom: solid 1px transparent;
+      margin: 0;
       margin-top: 0.425rem;
       padding-bottom: 0.3rem;
       color: #3D3D3D;
-      font-style: italic; }
-    .button.logout:hover span {
+      font-style: italic;
+      display: block;
+      width: auto;
+      text-align: center;
+      position: absolute;
+      right: 0;
+      bottom: 0.1rem; }
+    .button.logout:hover div {
       border-bottom: solid 1px #1F1F1F;
       color: #1F1F1F; }
     .button.logout span {
