--- a/src/sass/components/Dashboard.scss
+++ b/src/sass/components/Dashboard.scss
@@ -157,7 +157,7 @@
     // margin-right: 1em;
   }
   &.logout {
-    width: 7rem;
+    width: 6rem;
     font-size: 1em;
     text-align: center;
     background-color: transparent;
@@ -165,17 +165,24 @@
     border-radius: 0;
     display: flex;
     align-items: center;
-    justify-content: center;
-    // width: 6.125rem;
-    span {
+    padding: 0 0.2rem 0 0;
+    position: relative;
+    div {
       border-bottom: solid 1px transparent;
+      margin: 0;
       margin-top: 0.425rem;
       padding-bottom: 0.3rem;
       color: $c7;
       font-style: italic;
+      display: block;
+      width: auto;
+      text-align: center;
+      position: absolute;
+      right: 0;
+      bottom: 0.1rem;
     }
     &:hover {
-      span {
+      div {
         border-bottom: solid 1px $c8;
         color: $c8;
       }
