Add minor style changes

--- a/src/sass/components/Order.scss
+++ b/src/sass/components/Order.scss
@@ -196,6 +196,7 @@
         }
         .ShippingAddressForm {
           position: fixed;
+          overflow-y: scroll;
           top: 0;
           left: 0;
           z-index: 500;
