--- a/src/css/components/Order.css
+++ b/src/css/components/Order.css
@@ -323,6 +323,7 @@
             outline: none; }
         .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm {
           position: fixed;
+          overflow-y: scroll;
           top: 0;
           left: 0;
           z-index: 500;
